--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,12 @@
             <!--<artifactId>spring-boot-devtools</artifactId>-->
             <!--<optional>true</optional>-->
         <!--</dependency>-->
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.14.0</version>
+        </dependency>
     </dependencies>
 
     <build>
