--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,13 @@
             <artifactId>selenium-java</artifactId>
             <version>3.14.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>phantomjsdriver</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
