--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
-#页面默认前缀目录
-#spring.mvc.view.prefix=/WEB-INF/jsp/
-#spring.thymeleaf.prefix=/WEB-INF/jsp/
-#页面默认后缀目录
-#spring.mvc.view.suffix=.jsp
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.cache = false
-
-spring.datasource.url=jdbc:mysql://47.104.143.33:3306/mysql?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-server.address=127.0.0.1
-
-mybatis.mapper-locations=classpath:com/example/demo/mapper/*.xml
-
-#spring.resources.static-locations=classpath:/templates
-
-server.port=8080
+##页面默认前缀目录
+##spring.mvc.view.prefix=/WEB-INF/jsp/
+##spring.thymeleaf.prefix=/WEB-INF/jsp/
+##页面默认后缀目录
+##spring.mvc.view.suffix=.jsp
+#spring.thymeleaf.suffix=.html
+#spring.thymeleaf.cache = false
+#
+#spring.datasource.url=jdbc:mysql://47.104.143.33:3306/mysql?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#server.address=127.0.0.1
+#
+#mybatis.mapper-locations=classpath:com/example/demo/mapper/*.xml
+#
+##spring.resources.static-locations=classpath:/templates
+#
+#server.port=8080
