--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  profiles:
+    active: dev
   thymeleaf:
     cache: false
     suffix: .html
@@ -9,7 +11,6 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
 
 server:
-  address: 127.0.0.1
   port: 8080
 
 
