--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,8 +6,10 @@ spring:
     suffix: .html
   datasource:
        driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+#       driver-class-name: com.microsoft.jdbc.sqlserver.SQLServerDriver
        url: jdbc:sqlserver://P3TWSQL02\PSQL;Databasename=gdMasterCatalog
 #       username: sa
 #       password: password
+#java -jar demo-0.0.1-SNAPSHOT.jar --spring.profiles.active=prod
 server:
   port: 8080
