--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -8,7 +8,7 @@ spring:
        driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
 #       driver-class-name: com.microsoft.jdbc.sqlserver.SQLServerDriver
        url: jdbc:sqlserver://P3TWSQL02\PSQL;Databasename=gdMasterCatalog
-       integratedSecurity: true
+       integratedSecurity: false
 #       username: sa
 #       password: password
 #java -jar demo-0.0.1-SNAPSHOT.jar --spring.profiles.active=prod
